# bioinformatics_mini_2025

./: pyproject.toml
notebooks/labs/: 14-molecules_vs_drugs-results.ipynb  14-molecules_vs_drugs.ipynb  15-pbpk-results.ipynb  15-pbpk.ipynb
