[project]
name = "bioinformatics-mini-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "biopython>=1.85",
    "biotite>=1.4.0",
    "cooler>=0.10.4",
    "gemmi>=0.7.3",
    "GEOparse>=1.0.0",
    "gseapy>=1.1.11",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "mdtraj>=1.11.0",
    "muscle3>=0.8.0",
    "networkx>=3.5",
    "openmm>=8.4.0",
    "pandas>=2.3.3",
    "persim>=0.3.8",
    "plotly>=6.5.0",
    "py3dmol>=2.5.3",
    "pyteomics>=4.7.5",
    "python-louvain>=0.16",
    "python-pptx>=1.0.2",
    "pyvis>=0.3.2",
    "rdkit>=2025.3.6",
    "ripser>=0.6.14",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.0",
    "tellurium>=2.2.11.2",
    "umap-learn>=0.5.9.post2",
    "xgboost>=3.1.2",
]
